--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@mui/material": "^6.1.3",
         "@reduxjs/toolkit": "^1.9.5",
         "framer-motion": "^10.12.22",
         "react": "^18.2.0",
